infra/k8s/insights-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insights
  template:
    metadata:
      labels:
        app: insights
    spec:
      containers:
        - name: insights
          image: liran1789/insights
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/insights/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: insights-srv
spec:
  selector:
    app: insights
  ports:
    - name: insights
      protocol: TCP
      port: 3000
      targetPort: 3000
