infra/k8s/quizzes-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizzes-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quizzes
  template:
    metadata:
      labels:
        app: quizzes
    spec:
      containers:
        - name: quizzes
          image: liran1789/quizzes
          readinessProbe:
            httpGet:
              path: /api/quizzes/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: quizzes-srv
spec:
  selector:
    app: quizzes
  ports:
    - name: quizzes
      protocol: TCP
      port: 3000
      targetPort: 3000
