infra/k8s/sessions-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sessions
  template:
    metadata:
      labels:
        app: sessions
    spec:
      containers:
        - name: sessions
          image: liran1789/sessions
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/sessions/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: sessions-srv
spec:
  selector:
    app: sessions
  ports:
    - name: sessions
      protocol: TCP
      port: 3000
      targetPort: 3000
