infra/k8s/sessions-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sessions-mongo
  template:
    metadata:
      labels:
        app: sessions-mongo
    spec:
      containers:
        - name: sessions-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: sessions-mongo-srv
spec:
  selector:
    app: sessions-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
