infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: worksheeter.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/worksheets/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: worksheets-srv
                port:
                  number: 3000
          - path: /api/quizzes/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: quizzes-srv
                port:
                  number: 3000
          - path: /api/insights/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: insights-srv
                port:
                  number: 3000
          - path: /api/coding/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: coding-srv
                port:
                  number: 3000
          - path: /api/sessions/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sessions-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
